Updated GitHub action

--- a/.github/workflows/3.2_ubuntu_release.yml
+++ b/.github/workflows/3.2_ubuntu_release.yml
@@ -121,9 +121,19 @@ jobs:
             - name: Fix dependency paths
               working-directory: ${{ env.PORTABLE_DIR }}
               run: |
-                chrpath -r \$ORIGIN/../lib lib/* platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so
-                chrpath -r \$ORIGIN/lib sqlitestudio
-                chrpath -r \$ORIGIN/lib sqlitestudiocli
+                ls -l
+                ls -l lib/*
+                ls -l platforms/*.so
+                ls -l imageformats/*.so
+                ls -l iconengines/*.so
+                ls -l printsupport/*.so
+                ls -l platformthemes/*.so
+                chrpath -k -r \$ORIGIN/../lib lib/* platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so 2>&1 >/dev/null
+                chrpath -k -r \$ORIGIN/lib sqlitestudio 2>&1 >/dev/null
+                chrpath -k -r \$ORIGIN/lib sqlitestudiocli 2>&1 >/dev/null
+                chrpath -l lib/* platforms/*.so imageformats/*.so iconengines/*.so printsupport/*.so platformthemes/*.so 2>&1 >/dev/null
+                chrpath -l sqlitestudio 2>&1 >/dev/null
+                chrpath -l sqlitestudiocli 2>&1 >/dev/null
 
             - name: Determine SQLiteStudio version
               working-directory: ${{ env.PORTABLE_DIR }}
