--- a/.github/workflows/ubuntu_release.yml
+++ b/.github/workflows/ubuntu_release.yml
@@ -1,17 +1,15 @@
 env:
-    SQLITESTUDIO_BRANCH: 3.2
     QT_VERSION: '5.14.2'
     SQLITE_VERSION: '3310100'
     SQLITE_RELEASE_YEAR: '2020'
     TCL_VERSION: '8.6'
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
 
-name: 3.2 branch Linux release build
+name: Linux release build
 
 on:
-    push:
-        branches:
-            - 3.2
+    repository_dispatch:
+        types: [lin_release]
 
 jobs:
     build:
@@ -37,7 +35,7 @@ jobs:
             - name: Clone repo
               uses: actions/checkout@v2
               with:
-                ref: ${{ env.SQLITESTUDIO_BRANCH }}
+                ref: ${{ github.event.client_payload.branch }}
 
             - name: Install SQLite3
               run: |
@@ -132,8 +130,17 @@ jobs:
               working-directory: ${{ env.PORTABLE_DIR }}
               run: echo ::set-env name=SQLITESTUDIO_VERSION::$(./sqlitestudiocli --version | cut -f 2 -d ' ')
 
+            - name: Assemble portable package
+              shell: bash
+              working-directory: ${{ env.PORTABLE_DIR }}/..
+              run: |
+                tar cf sqlitestudio-$SQLITESTUDIO_VERSION.tar SQLiteStudio
+                xz -z sqlitestudio-$SQLITESTUDIO_VERSION.tar
+                pwd
+                ls -l
+
             - name: Upload package artifact
               uses: actions/upload-artifact@v1
               with:
-                name: sqlitestudio-${{ env.SQLITESTUDIO_VERSION }}
-                path: output/portable
+                name: sqlitestudio-${{ env.SQLITESTUDIO_VERSION }}.tar.xz
+                path: output/portable/sqlitestudio-${{ env.SQLITESTUDIO_VERSION }}.tar.xz
