Updated GitHub action

--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -39,20 +39,20 @@ jobs:
               # with:
                 # ref: ${{ github.event.client_payload.branch }}
 
-            - name: Install SQLite3
-              run: |
-                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-autoconf-$SQLITE_VERSION.tar.gz
-                tar xzf sqlite-autoconf-$SQLITE_VERSION.tar.gz
-                cd sqlite-autoconf-$SQLITE_VERSION
-                ./configure --enable-fts5 --enable-json1 --enable-session
-                make
-                sudo make install
-                sqlite3 --version
+            # - name: Install SQLite3
+              # run: |
+                # wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-autoconf-$SQLITE_VERSION.tar.gz
+                # tar xzf sqlite-autoconf-$SQLITE_VERSION.tar.gz
+                # cd sqlite-autoconf-$SQLITE_VERSION
+                # ./configure --enable-fts5 --enable-json1 --enable-session
+                # make
+                # sudo make install
+                # sqlite3 --version
             
             - name: debug
               run: |
-               which sqlite3
-               sqlite3 --version
+                which tclsh
+                echo "puts $tcl_version" | tclsh
         
             # - name: Install Tcl
               # run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
