--- a/.github/workflows/mac_release.yml
+++ b/.github/workflows/mac_release.yml
@@ -83,7 +83,10 @@ jobs:
               run: |
                 make bundle
                 make pkg
-                ls -l
+                
+            - name: Upload package artifact
+              working-directory: output
+              run: ls -l SQLiteStudio
 
 
 
