--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,77 +1,81 @@
-# env:
-    # SQLITESTUDIO_BRANCH: 3.2
-    # QT_VERSION: '5.14.2'
-    # SQLITE_VERSION: '3310100'
-    # SQLITE_RELEASE_YEAR: '2020'
-    # TCL_VERSION: '8.6'
-    # PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
+env:
+    SQLITESTUDIO_BRANCH: 3.2
+    QT_VERSION: '5.14.2'
+    SQLITE_VERSION: '3310100'
+    SQLITE_RELEASE_YEAR: '2020'
+    TCL_VERSION: '8.6'
+    PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
 
-# name: 3.2 branch Linux release build
+name: 3.2 branch Linux release build
 
-# on:
-    # push:
-        # branches:
-            # - 3.2
+on:
+    push:
+        branches:
+            - 3.2
 
-# jobs:
-    # build:
-        # runs-on: ubuntu-18.04
+jobs:
+    build:
+        runs-on: ubuntu-18.04
 
-        # steps:
-            # - name: Cache Qt
-              # id: cache-qt
-              # uses: actions/cache@v1
-              # with:
-                # path: ${{ github.workspace }}/../Qt
-                # key: ${{ runner.os }}-Qt-Linux-Cache
+        steps:
+            - name: Cache Qt
+              id: cache-qt
+              uses: actions/cache@v1
+              with:
+                path: ${{ github.workspace }}/../Qt
+                key: ${{ runner.os }}-Qt-Linux-Cache
                 
-            # - name: Install Qt
-              # uses: jurplel/install-qt-action@v2
-              # with:
-                # cached: ${{ steps.cache-qt.outputs.cache-hit }}
-                # version: ${{ env.QT_VERSION }}
-                # host: 'linux'
-                # dir: '${{ github.workspace }}/..'
-                # modules: 'qtscript'
+            - name: Install Qt
+              uses: jurplel/install-qt-action@v2
+              with:
+                cached: ${{ steps.cache-qt.outputs.cache-hit }}
+                version: ${{ env.QT_VERSION }}
+                host: 'linux'
+                dir: '${{ github.workspace }}/..'
+                modules: 'qtscript'
                 
-            # - name: Clone repo
-              # uses: actions/checkout@v2
-              # with:
-                # ref: ${{ env.SQLITESTUDIO_BRANCH }}
+            - name: Clone repo
+              uses: actions/checkout@v2
+              with:
+                ref: ${{ env.SQLITESTUDIO_BRANCH }}
 
-            # - name: Install SQLite3
-              # run: |
-                # wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-autoconf-$SQLITE_VERSION.tar.gz
-                # tar xzf sqlite-autoconf-$SQLITE_VERSION.tar.gz
-                # cd sqlite-autoconf-$SQLITE_VERSION
-                # ./configure --enable-fts5 --enable-json1 --enable-session
-                # make
-                # sudo make install
-                # sqlite3 --version
+            - name: Install SQLite3
+              run: |
+                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-autoconf-$SQLITE_VERSION.tar.gz
+                tar xzf sqlite-autoconf-$SQLITE_VERSION.tar.gz
+                cd sqlite-autoconf-$SQLITE_VERSION
+                ./configure --enable-fts5 --enable-json1 --enable-session
+                make
+                sudo make install
+                sqlite3 --version
             
-            # - name: Install Tcl
-              # run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
+            - name: Install Tcl
+              run: sudo apt-get install -qq libtcl$TCL_VERSION tcl$TCL_VERSION-dev
               
-            # - name: Install other tools/dependencies
-              # run: |
-                # sudo apt install libreadline-dev libncurses5-dev
-                # echo "::add-path::${{ github.workspace }}/../Qt/${{ env.QT_VERSION }}/gcc_64/bin"
+            - name: Install other tools/dependencies
+              run: |
+                sudo apt install libreadline-dev libncurses5-dev
+                echo "::add-path::${{ github.workspace }}/../Qt/${{ env.QT_VERSION }}/gcc_64/bin"
  
-            # - name: Prepare output dir
-              # run: mkdir output output/build output/build/Plugins
+            - name: Prepare output dir
+              run: mkdir output output/build output/build/Plugins
             
-            # - name: Compile SQLiteStudio3
-              # working-directory: output/build
-              # run: |
-                # qmake CONFIG+=portable ../../SQLiteStudio3
-                # make -j 2
+            - name: Compile SQLiteStudio3
+              working-directory: output/build
+              run: |
+                qmake CONFIG+=portable CONFIG+=debug DEFINES+=tests ../../SQLiteStudio3
+                make -j 2
             
-            # - name: Compile Plugins
-              # working-directory: output/build/Plugins
-              # run: |
-                # qmake CONFIG+=portable ../../../Plugins
-                # make -j 2
-              
+            - name: Compile Plugins
+              working-directory: output/build/Plugins
+              run: |
+                qmake CONFIG+=portable CONFIG+=debug DEFINES+=tests ../../../Plugins
+                make -j 2
+
+            - name: Prepare portable dir
+              working-directory: output/SQLiteStudio
+              run: for f in tst_*; do ./$f; done
+
             # - name: Prepare portable dir
               # working-directory: output
               # run: |
